fix recent disputes on mobile

--- a/src/components/styles/dispute-card.module.css
+++ b/src/components/styles/dispute-card.module.css
@@ -1,10 +1,14 @@
 .disputeCard {
-  margin: 0 2rem;
   box-shadow: 0px 6px 36px var(--color-pink);
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
 }
 
+@media (min-width: 600px) {
+  .disputeCard {
+    margin: 0 2rem;
+  }
+}
 .disputeCard > div {
   border-radius: 12px;
   background-color: transparent;
@@ -65,7 +69,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  margin-left: 5%;
 }
 
 .disputeCard .innerCard > div > span:first-child {
